objects/August_Demo__c.object
<CustomObject>
    <fields>
        <fullName>Aug15_text__c</fullName>
        <label>Aug15 text</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Aug_Demo_text__c</fullName>
        <label>Aug Demo text</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_A__c</fullName>
        <label>Field A</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Performance__c</fullName>
        <label>Performance</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Windstream_text_field__c</fullName>
        <label>Windstream text field</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>August Demo</label>
    <nameField>
        <label>August Demo Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>August Demos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>